# serde_krds

./: Cargo.toml  README.md  README.org  test
src/: cli.rs  de.rs  error.rs  file_formats.rs  lib.rs  main.rs  ser.rs  test.rs
test_files/: bookhl+note.azw3f  bookhl+note.azw3r  pdfannot.yjf  pdfannot.yjr
