[package]
name = "krds_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.4.0", features = ["derive"] }
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
num-traits = "0.2.16"
serde = { version = "1.0.188", features = ["serde_derive"] }
