[package]
name = "serde_krds"
authors = ["willemml <willem@leit.so>"]
description = "Serde serializer and deserializer implementations for Amazon's KRDS data format."
repository = "https://github.com/willemml/serde_krds"
license = "GPL-3.0"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["serde_derive"] }

[dev-dependencies]
kindle_formats = { version = "0.1.1", features = ["linked_hash_maps"] }
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
num-traits = "0.2.16"

[patch.crates-io]
kindle_formats = { path = "../kindle_formats" }